Add missing symbols to meshlink.sym.
Also ensure automake treats it as a dependency, so it will rebuild the
library correctly whenever it is updated.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,8 @@ libmeshlink_la_SOURCES = \
 	$(chacha_poly1305_SOURCES) \
 	$(utcp_SOURCES)
 
+EXTRA_libmeshlink_la_DEPENDENCIES = $(srcdir)/meshlink.sym
+
 libmeshlink_la_CFLAGS = $(PTHREAD_CFLAGS) -fPIC -iquote.
 libmeshlink_la_LDFLAGS += $(PTHREAD_LIBS)
 
