Re-enable building the chatpp example.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = meshlinkapp chat manynodes channels groupchat
+noinst_PROGRAMS = meshlinkapp chat chatpp manynodes channels groupchat
 
 AM_CPPFLAGS = $(PTHREAD_CFLAGS) -I${top_srcdir}/src -iquote. -Wall
 AM_LDFLAGS = $(PTHREAD_LIBS)
@@ -9,9 +9,9 @@ meshlinkapp_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src
 chat_SOURCES = chat.c
 chat_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
-#noinst_PROGRAMS += chatpp
-#chatpp_SOURCES = chatpp.cc
-#chatpp_LDADD = ${top_builddir}/src/libmeshlink.la
+noinst_PROGRAMS += chatpp
+chatpp_SOURCES = chatpp.cc
+chatpp_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
 manynodes_SOURCES = manynodes.c
 manynodes_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
@@ -22,7 +22,7 @@ channels_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/li
 if MONITOR
 noinst_PROGRAMS += monitor
 monitor_SOURCES = monitor.c
-monitor_LDADD = ${top_builddir}/src/libmeshlink.la $(NCURSES_LIBS) -lm
+monitor_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la $(NCURSES_LIBS) -lm
 endif
 
 groupchat_SOURCES = groupchat.c
