--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -60,7 +60,9 @@ run_blackbox_tests_SOURCES = \
 	test_cases_submesh01.c \
 	test_cases_submesh02.c \
 	test_cases_submesh03.c \
-	test_cases_submesh04.c
+	test_cases_submesh04.c \
+	test_cases_random_port_bindings01.c \
+	test_cases_random_port_bindings02.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la $(LXC_LIBS) $(CMOCKA_LIBS)
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE $(LXC_CFLAGS) $(CMOCKA_CFLAGS)
