--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "catta"]
 	path = catta
-	url = git://meshlink.io/catta
+	url = ../catta
 	branch = develop
 [submodule "src/utcp"]
 	path = src/utcp
-	url = git://meshlink.io/utcp
+	url = ../utcp
