Replace rand() by xoshiro256** with per-mesh state.
We need a reasonable fast PRNG that doesn't have to be secure, for things
like timer randomization, port number generation and so on. Already some
platforms warn about the use of rand(). Also, when calling fork(), both
parent and child have the same PRNG seed, which causes some inefficiencies
in the test suite.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,6 +78,7 @@ libmeshlink_la_SOURCES = \
 	system.h \
 	utils.c utils.h \
 	xalloc.h \
+	xoshiro.c xoshiro.h \
 	devtools.c devtools.h \
 	$(ed25519_SOURCES) \
 	$(chacha_poly1305_SOURCES) \
