--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -13,6 +13,7 @@ TESTS = \
 	duplicate \
 	encrypted \
 	ephemeral \
+	get-all-nodes \
 	import-export \
 	invite-join \
 	sign-verify \
@@ -44,6 +45,7 @@ check_PROGRAMS = \
 	echo-fork \
 	encrypted \
 	ephemeral \
+	get-all-nodes \
 	import-export \
 	invite-join \
 	sign-verify \
@@ -98,6 +100,9 @@ encrypted_LDADD = ../src/libmeshlink.la
 
 ephemeral_SOURCES = ephemeral.c utils.c utils.h
 ephemeral_LDADD = ../src/libmeshlink.la
+
+get_all_nodes_SOURCES = get-all-nodes.c utils.c utils.h
+get_all_nodes_LDADD = ../src/libmeshlink.la
 
 import_export_SOURCES = import-export.c utils.c utils.h
 import_export_LDADD = ../src/libmeshlink.la
