Add support for recvmmsg().
Performance analysis with Linux's perf tool has shown that while
transferring a stream of data, MeshLink's main thread spends 66% of the
time in the system calls select(), sendto() and recvfrom() combined. One
way to reduce that is to handle more than one packet at once with a
single system call.

This commit makes MeshLink use recvmmsg() if available.

--- a/configure.ac
+++ b/configure.ac
@@ -126,7 +126,7 @@ MeshLink_ATTRIBUTE(__warn_unused_result__)
 
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
-AC_CHECK_FUNCS([asprintf fchmod fork gettimeofday random pselect select setns strdup usleep getifaddrs freeifaddrs],
+AC_CHECK_FUNCS([asprintf fchmod fork gettimeofday random pselect recvmmsg select setns strdup usleep getifaddrs freeifaddrs],
   [], [], [#include "$srcdir/src/have.h"]
 )
 
