Implement MESHLINK_CHANNEL_FRAMED.
Both UDP and TCP style channels can now be set to use message framing.
Allowed message sizes are 0 to 65535 bytes.

For TCP, this means every meshlink_channel_send() will cause exactly one
receive callback on the other end, with the same size as the sent data.

For UDP style channels, this was already the normal behaviour (absent
packet loss), but with framing enabled UTCP will now concatenate multiple
messages in a single packet if possible.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,8 +9,10 @@ TESTS = \
 	channels-cornercases \
 	channels-failure \
 	channels-fork \
+	channels-framed \
 	channels-no-partial \
 	channels-udp \
+	channels-udp-framed \
 	duplicate \
 	encrypted \
 	ephemeral \
@@ -43,8 +45,10 @@ check_PROGRAMS = \
 	channels-cornercases \
 	channels-failure \
 	channels-fork \
+	channels-framed \
 	channels-no-partial \
 	channels-udp \
+	channels-udp-framed \
 	duplicate \
 	echo-fork \
 	encrypted \
@@ -73,6 +77,9 @@ blacklist_LDADD = $(top_builddir)/src/libmeshlink.la
 channels_SOURCES = channels.c utils.c utils.h
 channels_LDADD = $(top_builddir)/src/libmeshlink.la
 
+channels_framed_SOURCES = channels-framed.c utils.c utils.h
+channels_framed_LDADD = $(top_builddir)/src/libmeshlink.la
+
 channels_aio_SOURCES = channels-aio.c utils.c utils.h
 channels_aio_LDADD = $(top_builddir)/src/libmeshlink.la
 
@@ -96,6 +103,9 @@ channels_cornercases_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_udp_SOURCES = channels-udp.c utils.c utils.h
 channels_udp_LDADD = $(top_builddir)/src/libmeshlink.la
+
+channels_udp_framed_SOURCES = channels-udp-framed.c utils.c utils.h
+channels_udp_framed_LDADD = $(top_builddir)/src/libmeshlink.la
 
 duplicate_SOURCES = duplicate.c utils.c utils.h
 duplicate_LDADD = $(top_builddir)/src/libmeshlink.la
