Don't overwrite CFLAGS when adding -std=c11.

--- a/configure.ac
+++ b/configure.ac
@@ -54,7 +54,7 @@ if test -d /sw/lib ; then
   LIBS="$LIBS -L/sw/lib"
 fi
 
-AX_CHECK_COMPILE_FLAG([-std=c11], [CFLAGS="-std=c11"])
+AX_CHECK_COMPILE_FLAG([-std=c11], [CFLAGS="$CFLAGS -std=c11"])
 
 dnl Compiler hardening flags
 dnl No -fstack-protector-all because it doesn't work on all platforms or architectures.
