Ensure the poll callback is called when a UDP channel has finished connecting.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -11,6 +11,7 @@ TESTS = \
 	channels-fork \
 	channels-no-partial \
 	channels-udp \
+	channels-udp-cornercases \
 	duplicate \
 	encrypted \
 	ephemeral \
@@ -50,6 +51,7 @@ check_PROGRAMS = \
 	channels-fork \
 	channels-no-partial \
 	channels-udp \
+	channels-udp-cornercases \
 	duplicate \
 	echo-fork \
 	encrypted \
@@ -105,6 +107,9 @@ channels_cornercases_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_udp_SOURCES = channels-udp.c utils.c utils.h
 channels_udp_LDADD = $(top_builddir)/src/libmeshlink.la
+
+channels_udp_cornercases_SOURCES = channels-udp-cornercases.c utils.c utils.h
+channels_udp_cornercases_LDADD = $(top_builddir)/src/libmeshlink.la
 
 duplicate_SOURCES = duplicate.c utils.c utils.h
 duplicate_LDADD = $(top_builddir)/src/libmeshlink.la
