Handle network change detection on macOS and iOS.
Apple has no usable PFROUTE sockets anymore, instead network change
detection should be done via SystemConfiguration callbacks. However,
actually parsing the messages is very annoying in C, so we only use it to
get notified of changes, we use getifaddrs() to get the actual list of
network interfaces and addresses.

The only issue is that interface up/down state changes do not result in a
notification, only interface and address addition/removal.

--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,9 @@ case $host_os in
     AC_DEFINE(HAVE_MINGW, 1, [MinGW])
     LIBS="$LIBS -lws2_32 -lgdi32 -lcrypt32"
   ;;
+  *darwin*)
+    LIBS="$LIBS -framework SystemConfiguration -framework CoreServices"
+  ;;
 esac
 
 AM_CONDITIONAL(LINUX, test "$linux" = true)
