Allow the application to provide channel send/receive buffers.
This adds two new functions to allow the application to allocate send
and/or receive buffers for channels:

meshlink_set_channel_rcvbuf_storage(mesh, channel, buf, size)
meshlink_set_channel_sndbuf_storage(mesh, channel, buf, size)

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,6 +6,7 @@ TESTS = \
 	channels-aio \
 	channels-aio-cornercases \
 	channels-aio-fd \
+	channels-buffer-storage \
 	channels-cornercases \
 	channels-failure \
 	channels-fork \
@@ -46,6 +47,7 @@ check_PROGRAMS = \
 	channels-aio \
 	channels-aio-cornercases \
 	channels-aio-fd \
+	channels-buffer-storage \
 	channels-cornercases \
 	channels-failure \
 	channels-fork \
@@ -92,6 +94,9 @@ channels_aio_cornercases_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_aio_fd_SOURCES = channels-aio-fd.c utils.c utils.h
 channels_aio_fd_LDADD = $(top_builddir)/src/libmeshlink.la
+
+channels_buffer_storage_SOURCES = channels-buffer-storage.c utils.c utils.h
+channels_buffer_storage_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_no_partial_SOURCES = channels-no-partial.c utils.c utils.h
 channels_no_partial_LDADD = $(top_builddir)/src/libmeshlink.la
