Make sure we #define _POSIX_C_SOURCE.
Some functions, such as clock_gettime(), officially require _POSIX_C_SOURCE
to be set to a minimum version in order to be usable.

--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,9 @@ AM_SILENT_RULES([yes])
 # Enable GNU extensions.
 # Define this here, not in acconfig's @TOP@ section, since definitions
 # in the latter don't make it into the configure-time tests.
-AC_GNU_SOURCE
+AC_USE_SYSTEM_EXTENSIONS
 AC_DEFINE([__USE_BSD], 1, [Enable BSD extensions])
+AC_DEFINE([_POSIX_C_SOURCE], 200809L, [Enable POSIX features])
 
 dnl Checks for programs.
 AM_PROG_CC_C_O
