Fix a compile error on macOS when using an older version of autoconf.
With autoconf 2.69, the USE_SYSTEM_EXTENSIONS macro did not enable
_DARWIN_C_SOURCE, which could cause a compile error. This is fixed in
autoconf 2.71, but in order to provide some backwards compatibility, we
manually enable _DARWIN_C_SOURCE for now.

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ AM_SILENT_RULES([yes])
 AC_USE_SYSTEM_EXTENSIONS
 AC_DEFINE([__USE_BSD], 1, [Enable BSD extensions])
 AC_DEFINE([_POSIX_C_SOURCE], 200809L, [Enable POSIX features])
+AC_DEFINE([_DARWIN_C_SOURCE], 1, [Enable Darwin features])
 
 dnl Checks for programs.
 AM_PROG_CC_C_O
